Add Java 1.9 test class (#9)
* New HTTP Client API
* Process API Improvements
* Private Methods in Interfaces
* JShell (Interactive REPL)
* Collection Factory Methods + fix Java2 collection test
* Java 9 Enhanced try-with-resources
* Update README.md