@@ -6,9 +6,9 @@ import org.junit.jupiter.api.Test;
 import javax.swing.*;
 import java.awt.*;
 import java.lang.reflect.InvocationTargetException;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 
 /**
  * Java 1.2 (December 1998)
@@ -17,9 +17,9 @@ public class Java2 {
 
     @Test
     public void testCollectionsApiBasics() {
-        var list = List.of(1, 2, 3);
-        var set = Set.of(1, 2, 3);
-        var map = Map.of(1, "One", 2, "Two", 3, "Three");
+        var list = Arrays.asList(1, 2, 3);
+        var set = new HashSet<>(list);
+        var map = Collections.singletonMap(2, "Two");
         Assertions.assertEquals(1, list.getFirst());
         Assertions.assertTrue(set.contains(1));
         Assertions.assertEquals("Two", map.get(2));
